# learning-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .vulture.ini  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.server  Dockerfile.test  Dockerfile.ui  IMPORTANT_SANDBOX_NOTE.md  LICENSE  Makefile  README.md  constraints.txt  demo_sandbox.py  docker-compose.yml  github_mcp.json  langgraph.json  langsmith.json  learning.md  mcp_servers.json  mypy.ini  package-lock.json  pyproject.toml  requirements-sandbox.txt  ruff.toml  test_agent_matplotlib.py  test_api_integration.py  test_file_extraction.py  test_frontend_integration.py  test_langsmith_simple.py  test_lifecycle.py  test_matplotlib_docker.py  test_matplotlib_frontend.py  test_matplotlib_inmemory.py  test_sandbox.py  test_sandbox_files.py  (+5 more)
.docker/buildx/activity/: default
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: code-mode.md  concents_multiagent.md  concepts_lowlevel.md  concepts_subgraphs.md  deepagent-streaming.md  deepagents_usage.md  howto_subgraphs.md  learning.md  long_term_learning_plan.md  multi_agent.md  sandbox_integration.md
scripts/: add_lifecycle_columns.py  lint-on-edit.sh  smoke_mcp_browser.py  start_servers.sh  test_browser_tools.py  verify_sandbox_source.py
scripts/postgres-init/: 01-create-databases.sql
src/learning_agent/: __init__.py  __main__.py  a2a_handler.py  agent.py  api_server.py  cli.py  config.py  learning_supervisor.py  server.py  state.py  stream_adapter.py  subagents.py
src/learning_agent/agents/: __init__.py  sub_agent.py
src/learning_agent/learning/: __init__.py  background_learner.py  execution_analyzer.py  langmem_integration.py  lifecycle_manager.py  maintenance_scheduler.py  narrative_learner.py  pattern_generalizer.py  storage_optimizer.py  tools.py  vector_storage.py
src/learning_agent/mcp/servers/: browser_use_stdioserver.py
src/learning_agent/orchestration/: __init__.py  models.py  orchestrator.py
src/learning_agent/providers/: __init__.py  embedding_factory.py  llm_factory.py
src/learning_agent/sandbox/: api_generator.py  mcp_http_bridge.py  mcp_namespace.py  remote_mcp_client.py
src/learning_agent/supervisor/: __init__.py  supervisor.py
src/learning_agent/tools/: __init__.py  a2a_tool.py  filesystem.py  mcp_browser.py  planning.py  sandbox_config.py  sandbox_tool.py
src/learning_agent/ui/: __init__.py
tests/: README.md  langsmith_eval.py  test_a2a.py  test_agent_helpers.py  test_basic.py  test_browser_mcp_docker.py  test_code_mode.py  test_deepagents_integration.py  test_docker_matplotlib.py  test_integration.py  test_learning_relevance.py  test_matplotlib_config.py  test_research_subagent.py  test_sandbox_config.py  test_sandbox_tool.py  test_subagent_graph.py
ui/: .dockerignore  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/api/copilotkit/: route.ts
ui/src/app/api/internal/files/[...path]/: route.ts
ui/src/app/api/internal/memories/: route.ts
ui/src/app/api/learnings/: route.ts
ui/src/app/api/proxy/[...path]/: route.ts
ui/src/app/components/ChatInterface/: ChatInterface.module.scss  ChatInterface.tsx
ui/src/app/components/ChatMessage/: ChatMessage.module.scss  ChatMessage.tsx
ui/src/app/components/FileViewDialog/: FileViewDialog.tsx
ui/src/app/components/FileViewer/: FileViewer.module.scss  FileViewer.tsx
ui/src/app/components/ImageViewer/: ImageViewer.module.scss  ImageViewer.tsx
ui/src/app/components/LearningPanel/: LearningPanel.module.scss  LearningPanel.tsx
ui/src/app/components/LearningQueue/: LearningQueue.module.scss  LearningQueue.tsx
ui/src/app/components/MarkdownContent/: MarkdownContent.module.scss  MarkdownContent.tsx
ui/src/app/components/MemoriesList/: MemoriesList.module.scss  MemoriesList.tsx
ui/src/app/components/PatternsView/: PatternsView.module.scss  PatternsView.tsx
ui/src/app/components/SubAgentCard/: SubAgentCard.module.scss  SubAgentCard.tsx
ui/src/app/components/TasksFilesSidebar/: TasksFilesSidebar.module.scss  TasksFilesSidebar.tsx
ui/src/app/components/ThreadHistorySidebar/: ThreadHistorySidebar.tsx
ui/src/app/components/ToolCallBox/: ToolCallBox.module.scss  ToolCallBox.tsx
ui/src/app/hooks/: useChat.ts
ui/src/app/styles/: globals.scss
ui/src/app/types/: types.ts
ui/src/app/utils/: utils.ts
ui/src/components/copilot/: agent-streaming.tsx  artifacts-gallery.tsx  learning-panel.tsx  task-list.tsx  types.ts
ui/src/components/ui/: badge.tsx  progress.tsx
ui/src/hooks/: useLearningPolling.ts  useMemoryPolling.ts
ui/src/lib/environment/: api.ts
ui/src/providers/: Auth.tsx
ui/tests/: browser-mcp.spec.ts
